--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@
  }
 
  .core-values {
-     background: linear-gradient(0deg, rgba(223, 184, 65, 0.9), rgba(223, 184, 65, 0.9)), url('assets/images/geometric-background-with-copy-space.jpg') no-repeat center center / cover;
+     background: linear-gradient(0deg, rgba(223, 184, 65, 0.9), rgba(223, 184, 65, 0.9)), url('../images/geometric-background-with-copy-space.jpg') no-repeat center center / cover;
  }
 
  .core-values .container .grid-3 {
@@ -113,7 +113,7 @@
  }
 
  .profile-img {
-     background: url('assets/images/bg-random-d1.png') no-repeat center center / contain;
+     background: url('../images/bg-random-d1.png') no-repeat center center / contain;
  }
 
  .portfolio {
@@ -135,7 +135,7 @@
  }
 
  .col-bizplan {
-     background: url(assets/images/bizplanpros.png) no-repeat top center / cover;
+     background: url('../images/bizplanpros.png') no-repeat top center / cover;
      min-height: 400px;
      border-radius: 10px;
  }
@@ -147,7 +147,7 @@
  }
 
  .col-sprach {
-     background: url(assets/images/sprachfox-v2.png) no-repeat top center / cover;
+     background: url('../images/sprachfox-v2.png') no-repeat top center / cover;
      min-height: 400px;
      border-radius: 10px;
  }
@@ -159,7 +159,7 @@
  }
 
  .col-light {
-     background: url(assets/images/lightningmedia.png) no-repeat top center / cover;
+     background: url('../images/lightningmedia.png') no-repeat top center / cover;
      min-height: 400px;
      border-radius: 10px;
  }
@@ -171,7 +171,7 @@
  }
 
  .col-flip {
-     background: url(assets/images/flipsidecap.png) no-repeat top center / cover;
+     background: url('../images/flipsidecap.png') no-repeat top center / cover;
      min-height: 400px;
      border-radius: 10px;
  }
