--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,245 +1,349 @@
- @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700;1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700;1000&display=swap');
 
- :root {
-     --primary-color: #002045;
-     --secondary-color: #DFB841;
- }
+:root {
+    --primary-color: #002045;
+    --secondary-color: #DFB841;
+}
 
- * {
-     box-sizing: border-box;
-     padding: 0;
-     margin: 0;
-     scroll-behavior: smooth;
- }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+}
 
- body {
-     font-family: 'DM Sans', sans-serif;
-     line-height: 1.3;
- }
+body {
+    font-family: 'DM Sans', sans-serif;
+    line-height: 1.3;
+}
 
- ul {
-     list-style-type: none;
- }
+ul {
+    list-style-type: none;
+}
 
- a {
-     text-decoration: none;
-     color: unset;
- }
+a {
+    text-decoration: none;
+    color: unset;
+}
 
- a:hover {
+a:hover {
     transition: ease-in-out 0.3s;
- }
+}
 
- h1 {
-     font-size: 50px;
-     font-weight: 1000;
-     line-height: 1;
- }
+h1 {
+    font-size: 50px;
+    font-weight: 1000;
+    line-height: 1;
+}
 
- h2 {
-     font-size: 40px;
-     font-weight: 700;
-     line-height: 1;
- }
+h2 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1;
+}
 
- h3 {
-     font-size: 24px;
- }
+h3 {
+    font-size: 24px;
+}
 
- .lead {
-     font-size: 26px;
- }
+.lead {
+    font-size: 26px;
+}
 
- p {
-     font-size: 18px;
- }
+p {
+    font-size: 18px;
+}
 
- img {
-     width: 100%;
- }
+img {
+    width: 100%;
+}
 
- /* Navigation */
- section.py-1.navigation {
-     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.058);
-     background: var(--primary-color);
-     color: #fff;
- }
+/* Navigation */
+section.py-1.navigation {
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.058);
+    background: var(--primary-color);
+    color: #fff;
+}
 
- .navbar {
-     justify-content: space-between !important;
- }
+.navbar {
+    justify-content: space-between !important;
+}
 
- .navbar ul li {
-     padding: 0 20px;
-     color: #fff;
- }
+.navbar ul li {
+    padding: 0 20px;
+    color: #fff;
+}
 
- .navbar ul li:hover {
-     color: #DFB841 !important;
-     transition: ease-in-out 0.3s;
- }
+.navbar ul li:hover {
+    color: #DFB841 !important;
+    transition: ease-in-out 0.3s;
+}
 
- .navbar img {
-     width: 80px;
- }
+.navbar img {
+    width: 80px;
+}
 
- /* Footer */
- .footer {
-     justify-content: space-between !important;
- }
+/* Footer */
+.footer {
+    justify-content: space-between !important;
+}
 
- .footer ul li {
-     padding: 0 20px;
- }
+.footer ul li {
+    padding: 0 20px;
+}
 
- .text-yellow {
-     color: #DFB841;
- }
+.text-yellow {
+    color: #DFB841;
+}
 
- .hero .lead {
-     color: #232323;
- }
+.hero .lead {
+    color: #232323;
+}
 
- .core-values {
-     background: linear-gradient(0deg, rgba(223, 184, 65, 0.9), rgba(223, 184, 65, 0.9)), url('../images/geometric-background-with-copy-space.jpg') no-repeat center center / cover;
- }
+.core-values {
+    background: linear-gradient(0deg, rgba(223, 184, 65, 0.9), rgba(223, 184, 65, 0.9)), url('../images/geometric-background-with-copy-space.jpg') no-repeat center center / cover;
+}
 
- .core-values .container .grid-3 {
+.core-values .container .grid-3 {
     gap: 0;
- }
+}
 
- .grid-3 .card {
-     margin-top: -40%;
- }
+.grid-3 .card {
+    margin-top: -40%;
+}
 
- .services .grid img {
+.services .grid img {
     width: 100%;
     border-radius: 15px !important;
 }
 
- .profile-img {
-     background: url('../images/bg-random-d1.png') no-repeat center center / contain;
- }
+.profile-img {
+    background: url('../images/bg-random-d1.png') no-repeat center center / contain;
+}
 
- .portfolio {
-     background: linear-gradient(0deg, rgba(0, 32, 69, 0.9), rgba(0, 32, 69, 0.9)), url('../images/wepik-photo-mode-2022117-143427.jpg') no-repeat center center / cover;
-     min-height: 400px;
-     color: #fff;
- }
+.portfolio {
+    background: linear-gradient(0deg, rgba(0, 32, 69, 0.9), rgba(0, 32, 69, 0.9)), url('../images/wepik-photo-mode-2022117-143427.jpg') no-repeat center center / cover;
+    min-height: 400px;
+    color: #fff;
+}
 
- .col-wintint {
-     background: url('../images/blackoutwindowstint.png') no-repeat top center / cover;
-     min-height: 400px;
-     border-radius: 10px;
- }
+.col-wintint {
+    background: url('../images/blackoutwindowstint.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
 
- .col-wintint:hover {
-     background-position: center bottom;
-     -webkit-transition: ease-in-out 4s !important;
-     transition: ease-in-out 4s !important;
- }
-
- .col-bizplan {
-     background: url('../images/bizplanpros.png') no-repeat top center / cover;
-     min-height: 400px;
-     border-radius: 10px;
- }
-
- .col-bizplan:hover {
+.col-wintint:hover {
     background-position: center bottom;
     -webkit-transition: ease-in-out 4s !important;
     transition: ease-in-out 4s !important;
- }
+}
 
- .col-sprach {
-     background: url('../images/sprachfox-v2.png') no-repeat top center / cover;
-     min-height: 400px;
-     border-radius: 10px;
- }
+.col-bizplan {
+    background: url('../images/bizplanpros.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
 
- .col-sprach:hover {
+.col-bizplan:hover {
     background-position: center bottom;
     -webkit-transition: ease-in-out 4s !important;
     transition: ease-in-out 4s !important;
- }
+}
 
- .col-light {
-     background: url('../images/lightningmedia.png') no-repeat top center / cover;
-     min-height: 400px;
-     border-radius: 10px;
- }
+.col-sprach {
+    background: url('../images/sprachfox-v2.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
 
- .col-light:hover {
+.col-sprach:hover {
     background-position: center bottom;
     -webkit-transition: ease-in-out 4s !important;
     transition: ease-in-out 4s !important;
- }
+}
 
- .col-flip {
-     background: url('../images/flipsidecap.png') no-repeat top center / cover;
-     min-height: 400px;
-     border-radius: 10px;
- }
+.col-light {
+    background: url('../images/lightningmedia.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
 
- .col-flip:hover {
+.col-light:hover {
     background-position: center bottom;
     -webkit-transition: ease-in-out 4s !important;
     transition: ease-in-out 4s !important;
- }
+}
 
- .portfolio .grid-3 {
-     padding: 25px 0;
- }
+.col-flip {
+    background: url('../images/flipsidecap.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
 
- .portfolio .grid>div {
-     border-radius: 10px;
- }
+.col-flip:hover {
+    background-position: center bottom;
+    -webkit-transition: ease-in-out 4s !important;
+    transition: ease-in-out 4s !important;
+}
 
- .portfolio .grid-3>div {
-     border-radius: 10px;
- }
+.portfolio .grid-3 {
+    padding: 25px 0;
+}
 
- .footer-sect {
-     background: var(--primary-color);
-     color: #fff;
- }
+.portfolio .grid>div {
+    border-radius: 10px;
+}
 
- .footer .fa {
+.portfolio .grid-3>div {
+    border-radius: 10px;
+}
+
+.footer-sect {
+    background: var(--primary-color);
+    color: #fff;
+}
+
+.footer .fa {
     padding-right: 8px;
- }
+}
 
- .footer ul li:hover {
+.footer ul li:hover {
     color: var(--secondary-color);
     transition: ease-in-out 0.3s;
- }
+}
 
- .cv {
+.cv {
     color: var(--secondary-color) !important;
- }
+}
 
- .cv:hover {
+.cv:hover {
     color: var(--primary-color) !important;
- }
+}
 
- a.btn-primary.me-2 :hover {
+a.btn-primary.me-2 :hover {
     transform: scale(1.1) !important;
- }
+}
 
- body > section.py-5.core-values > div > div > div.center.text-center.p-3 > a:hover {
+body>section.py-5.core-values>div>div>div.center.text-center.p-3>a:hover {
     background: #fff;
     color: var(--primary-color);
     transform: scale(1.1) !important;
- }
+}
 
- #projects > div > div.text-center.pt-3 > a:hover {
+#projects>div>div.text-center.pt-3>a:hover {
     background: #fff;
     color: var(--primary-color);
     transform: scale(1.1) !important;
- }
+}
 
- /* TABLET RESPONSIVE  */
+/* Projects CSS */
 
- @media only screen and (max-width: 768px) {
+.col-recent {
+    background: url('../images/blackoutwindowstint.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-2 {
+    background: url('../images/bizplanpros.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-3 {
+    background: url('../images/trendtracker.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-4 {
+    background: url('../images/miraclestonegroup.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-5 {
+    background: url('../images/sterndoghunts.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-6 {
+    background: url('../images/webtelmedia.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-7 {
+    background: url('../images/paraglobe.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-8 {
+    background: url('../images/sprachfox-v2.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-9 {
+    background: url('../images/ecomcpa.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-10 {
+    background: url('../images/twigs.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-11 {
+    background: url('../images/greeniglu.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-12 {
+    background: url('../images/golfpark.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-13 {
+    background: url('../images/mikehannegan.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-14 {
+    background: url('../images/lightningmedia.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-15 {
+    background: url('../images/carnegiehall.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-16 {
+    background: url('../images/healthyheartdocs.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+.col-17 {
+    background: url('../images/americanhistorydaily.png') no-repeat top center / cover;
+    min-height: 400px;
+    border-radius: 10px;
+}
+
+/* TABLET RESPONSIVE  */
+
+@media only screen and (max-width: 768px) {
     .container {
         padding: 0 15px !important;
     }
@@ -248,21 +352,21 @@
         padding: 40px 0;
     }
 
-    body > section.hero > div > div:nth-child(1) {
+    body>section.hero>div>div:nth-child(1) {
         padding-bottom: 60px;
-    } 
+    }
 
     .core-values .grid-3 {
         gap: 0;
     }
- }
+}
 
- /* Mobile responsive  */
+/* Mobile responsive  */
 
- @media only screen and (max-width: 460px) {
+@media only screen and (max-width: 460px) {
     .navbar {
         display: grid !important;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
         text-align: center;
         width: 100% !important;
     }
@@ -270,12 +374,12 @@
     .hero .container h1 {
         padding: 14px 0;
     }
-    
+
     .profile-img {
         display: none !important;
     }
 
-    body > section.hero > div > div:nth-child(2) {
+    body>section.hero>div>div:nth-child(2) {
         display: none;
     }
 
@@ -296,18 +400,16 @@
         border-radius: 15px !important;
     }
 
-
-
-    .services > div > div:nth-child(1) {
+    .services>div>div:nth-child(1) {
         display: flex !important;
         flex-direction: column-reverse !important;
- 
+
     }
 
-    .services > div > div:nth-child(3) {
+    .services>div>div:nth-child(3) {
         display: flex !important;
         flex-direction: column-reverse !important;
-   
+
     }
 
     .footer {
@@ -317,4 +419,4 @@
     .footer ul {
         margin-bottom: 15px;
     }
- }
+}
